tests/parser-test-files/bad-files/parse-type.10.error
error: Malformed type
  --> test:4:17
   |
 4 |  (declare f (T -> "T"))
   |                   ^^^ expected identifier
